third_party/rust/paste/tests/ui/env-empty.stderr
error: expected string literal as argument to env! macro
 --> $DIR/env-empty.rs:2:10
  |
2 |     fn [<env!()>]() {}
  |          ^^^^^^
