third_party/rust/paste/tests/ui/env-empty.rs
paste::item! {
    fn [<env!()>]() {}
}

fn main() {}
